fix collapse animation

--- a/my-app/src/style/Header.module.scss
+++ b/my-app/src/style/Header.module.scss
@@ -18,18 +18,6 @@
             font-size: 24px;
         }
 }
-.linkActif {
-    text-decoration: underline;
-    color: $fontColorDefault;
-}
-.linkInactif {
-    text-decoration: none;
-    color: $fontColorDefault;
-}
-.link {
-    text-decoration: none;
-    color: $fontColorDefault;
-}
 
 @media (max-width: $switchMobileWidth) {
     .header {
